# massive_game_server

./: .gitignore  AI_FIX_NOTES.md  ASYNC_BOT_AI_INTEGRATION.md  BOT_AI_ENHANCED.md  BOT_MOVEMENT_FIX_FINAL.md  BOT_MOVEMENT_FIX_SUMMARY.md  BOT_STUCK_DETECTION_ENHANCED.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GAME_LOOP_FREEZE_DEBUG.md  README.md  WALL_RESPAWN_SERVER_FIX_SUMMARY.md  architecture.md  flamegraph_analysis.txt  hackathon.md  note_on_flatc.md  package.json  performance.md  production_perfomance_log.md  quick_optimize.sh
.cargo/: config.toml
scripts/: gcp_linux_system_tuner.sh  generate_flatbuffers.sh  validate_amd_genoa.sh  validate_amd_genoa_cloud.sh
server/: Cargo.toml  README.md  RUN_WITH_DEBUG_LOGS.md  build.rs
server/schemas/: game.fbs
server/src/: lib.rs  main.rs
server/src/concurrent/: event_queue.rs  mod.rs  spatial_index.rs  thread_pools.rs  wall_spatial_index.rs
server/src/core/: config.rs  constants.rs  error.rs  mod.rs  types.rs
server/src/entities/: mod.rs  player.rs
server/src/network/: mod.rs  signaling.rs
server/src/operational/: mod.rs
server/src/operational/monitoring/: metrics.rs  mod.rs
server/src/server/: game_loop.rs  instance.rs  instance_active_walls_fix.patch  instance_bot_integration.rs  instance_initial_state_fix.patch  instance_wall_respawn_fix.patch  mod.rs
server/src/systems/: bots.rs  mod.rs  open_ai_bot.rs  respawn.rs
server/src/systems/ai/: async_bot_ai.rs  bot_ai.rs  mod.rs  optimized_bot_ai.rs
server/src/systems/physics/: collision.rs  mod.rs
server/src/world/: map_generator.rs  mod.rs  partition.rs
server/tests/integration/: basic_gameplay.rs  walls.rs
server/tests/performance/: boundary_stress.rs
static_client/: client.html  client_enhanced.html  client_enhanced.js  client_fullscreen.html  client_fullscreen_optimized.html  client_mobile.html  client_optimized.html  client_optimized_fixed.html  client_optimized_fixed_complete.html  client_optimized_fixed_complete.js  client_optimized_fixed_part1.js  client_optimized_fixed_part2.js  client_optimized_fixed_part3.js  client_optimized_fixed_part4.js  client_optimized_fixed_part5.js  client_optimized_projectiles_fixed.html  client_optimized_projectiles_fixed.js  client_optimized_projectiles_fixed_fullscreen.html  client_optimized_projectiles_fixed_fullscreen_simple.html  client_optimized_projectiles_fixed_fullscreen_working.html  client_optimized_projectiles_fixed_part2.js  fix-flatbuffers-imports.ps1  flatbuffers-preload.js  performance_enhanced.js  polyfill-runtime-protector.js  polyfill-safe-utils.js  polyfills-frozen.js  polyfills-guardian.js  polyfills-immediate.js  polyfills-protection.js  polyfills-ultra-robust.js  polyfills.js  test-polyfills-diagnostic.html  test-polyfills-ultra.html  test-polyfills.html
static_client/client_logic/: AudioManager.js  EffectsManager.js  Minimap.js  NetworkIndicator.js  README.md  index.js  utils.js
static_client/generated_js/: game-cdn.js  game-protocol.d.ts  game-protocol.d.ts.map  game-protocol.js  game-protocol.js.map  game-protocol.ts  game.d.ts  game.d.ts.map  game.js  game.js.map  game.ts
static_client/generated_js/game-protocol/: chat-message.d.ts  chat-message.d.ts.map  chat-message.js  chat-message.js.map  chat-message.ts  delta-state-message.d.ts  delta-state-message.d.ts.map  delta-state-message.js  delta-state-message.js.map  delta-state-message.ts  flag-state.d.ts  flag-state.d.ts.map  flag-state.js  flag-state.js.map  flag-state.ts  flag-status.d.ts  flag-status.d.ts.map  flag-status.js  flag-status.js.map  flag-status.ts  game-event-type.d.ts  game-event-type.d.ts.map  game-event-type.js  game-event-type.js.map  game-event-type.ts  game-event.d.ts  game-event.d.ts.map  game-event.js  game-event.js.map  game-event.ts  game-message.d.ts  game-message.d.ts.map  game-message.js  game-message.js.map  game-message.ts  game-mode-type.d.ts  game-mode-type.d.ts.map  game-mode-type.js  game-mode-type.js.map  game-mode-type.ts  (+89 more)
