# Cargo.toml


[workspace]
resolver = "2"
members = [
    "server",
    #"protocol", 
    #"stress-client",
    #"admin-tools",
]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true
opt-level = 3
strip=true


[profile.release.package."*"]
opt-level = 3
codegen-units = 1





[profile.release-with-debug]
inherits = "release"
debug = true

[profile.bench]
inherits = "release"
debug = true



